2010-09-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator/RingEdgeTopoGenerator.h: New file.
	* include/generator/RingTopoGenerator.h: Likewise.
	* include/generator/RingOptTopoGenerator.h: Likewise.

	* include/Makefile.am: Add new header files.

	* src/staticGen.cpp: Add new topologies.

2010-09-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator/OptTopologyGenerator.h: Separate
	OptTopoGenerator from TopoGenerator.
	* include/generator/DiamondZigZagOptTopoGenerator.h: Likewise.
	* include/generator/DiamondOptTopoGenerator.h: Likewise.
	* src/staticGen.cpp: Likewise.

	* include/generator/DiamondTopoGenerator.h: Typo.

2010-09-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator/TopologyGenerator.h: Rename
	ZIGZAG_DIAMOND_TOPOLOGY to DIAMOND_ZIGZAG_TOPOLOGY.
	* src/staticGen.cpp: Likewise.

	* include/generator/DiamondZigZagOptTopoGenerator.h: Remove edges
	when optimizing the topology.

2010-09-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/staticGen.cpp: Separate original topo generation from
	optimal topo generation.

	* include/generator/TopologyGenerator.h: Remove local interface map.

	* include/generator/DiamondTopoGenerator.h (create_opt_interface): Remove.

	* include/generator/DiamondOptTopoGenerator.h: Now inherits from
	OptTopologyGenerator

	* include/generator/ContextGenerator.h: include OptTopologyGenerator.h

	* include/Makefile.am: Add new header files.

	* include/generator/DiamondArbitraryTopoGenerator.h: New file.
	* include/generator/OptTopologyGenerator.h: Likewise.
	* include/generator/DiamondZigZagTopoGenerator.h: Likewise.
	* include/generator/DiamondZigZagOptTopoGenerator.h: Likewise.

	* m4/boost.m4: merged from trunk, to fix  the problem with boost 1.44 iostream lib check.

2010-09-15  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/tests/testClaspResultOnlineParser.cpp: Rename V --> belief_state.

	* include/generator/TopologyGenerator.h: Rename iterator.
